// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for activity 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "marginLeft": 8,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <Text>
      <Text
        style={
          Object {
            "fontWeight": "600",
          }
        }
      >
        someUser
      </Text>
       
      down voted
       
      <Text
        style={
          Object {
            "fontWeight": "600",
          }
        }
      >
        some title
      </Text>
    </Text>
  </View>
  <Text
    style={
      Object {
        "fontSize": 11,
      }
    }
  >
    Invalid date
  </Text>
</View>
`;

exports[`renders correctly for comment 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "marginLeft": 8,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <Text>
      <Text
        style={
          Object {
            "fontWeight": "600",
          }
        }
      >
        someUser
      </Text>
       
      down voted
       
      <Text
        style={
          Object {
            "fontWeight": "600",
          }
        }
      >
         
        your comment
         
      </Text>
    </Text>
  </View>
  <Text
    style={
      Object {
        "fontSize": 11,
      }
    }
  >
    Invalid date
  </Text>
</View>
`;

exports[`renders correctly for object 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "marginLeft": 8,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <Text>
      <Text
        style={
          Object {
            "fontWeight": "600",
          }
        }
      >
        someUser
      </Text>
       
      down voted
       
      <Text
        style={
          Object {
            "fontWeight": "600",
          }
        }
      >
        some title
      </Text>
    </Text>
  </View>
  <Text
    style={
      Object {
        "fontSize": 11,
      }
    }
  >
    Invalid date
  </Text>
</View>
`;
